<resources>
    <string name="app_name">ScareMe3</string>
    <string name="sign_in_text">Sign In</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="scareme_text">ScareMe</string>
    <string name="e_mail_text">E-mail</string>
    <string name="password_text">Password</string>
    <string name="repeat_password_text">Repeat password</string>
    <string name="save_text">Save</string>
    <string name="why_are_you_scary_text">Why are you scary?</string>
    <string name="name_text">Name</string>
    <string name="about_text">About</string>
    <string name="party_topics_text">Party Topics</string>
    <string name="trick_or_treat_text">Trick or Treat?</string>
</resources>