<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="@color/color1">
    <TextView
        android:id="@+id/textSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/sign_in_text"
        android:textColor="@color/color5"
        android:fontFamily="@font/baloo_paaji2_bold"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/textAlredyHave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textSignIn"
        android:text="@string/already_have_an_account_text"
        android:textColor="@color/color4"
        android:fontFamily="@font/baloo_paaji2_bold"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:fontFamily="@font/baloo_paaji2_bold"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/color5"
        android:background="@drawable/btn_back"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/color1"
        app:cornerRadius="16dp"
        android:text="@string/sign_up_text"
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textAlredyHave"/>

    <TextView
        android:id="@+id/textScareMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnSignUp"
        android:text="@string/scareme_text"
        android:textColor="@color/color5"
        android:fontFamily="@font/jolly_lodger_regular"
        android:textSize="100sp"
        android:layout_marginBottom="185dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>