<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color1"
    tools:context=".SignInUpActivity">

    <com.google.android.material.button.MaterialButton
        android:fontFamily="@font/baloo_paaji2_bold"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/color5"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/color1"
        app:cornerRadius="16dp"
        android:text="@string/sign_up_text"
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/textSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="36sp"
        android:fontFamily="@font/baloo_paaji2_bold"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:text="@string/sign_up_text"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/textSignUp">
        <EditText
            android:id="@+id/editEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/color2"
            android:hint="@string/e_mail_text"
            android:textColorHint="@color/white"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:fontFamily="@font/baloo_paaji2_bold"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPassword"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/cardEmail">
        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/color2"
            android:hint="@string/password_text"
            android:textColorHint="@color/white"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:fontFamily="@font/baloo_paaji2_bold"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardRepPassword"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/cardPassword">
        <EditText
            android:id="@+id/editRepPassword"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/color2"
            android:hint="@string/repeat_password_text"
            android:textColorHint="@color/white"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:fontFamily="@font/baloo_paaji2_bold"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>