<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@color/color1">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAllCaps="false"
        android:backgroundTint="@color/color5"
        app:cornerRadius="16dp"
        android:textColor="@color/color1"
        android:fontFamily="@font/baloo_paaji2_bold"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:padding="14dp" />

    <TextView
        android:id="@+id/textSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/sign_in_text"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:fontFamily="@font/baloo_paaji2_bold"
        android:layout_marginTop="104dp"
        android:layout_marginStart="16dp"/>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="16dp"
        android:id="@+id/cardEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/textSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/color2"
            android:paddingStart="24sp"
            android:paddingEnd="24sp"
            android:paddingTop="18sp"
            android:paddingBottom="18sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:fontFamily="@font/baloo_paaji2_bold"
            android:hint="@string/e_mail_text"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="16dp"
        android:id="@+id/cardPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/cardEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/color2"
            android:paddingStart="24sp"
            android:paddingEnd="24sp"
            android:paddingTop="18sp"
            android:paddingBottom="18sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:fontFamily="@font/baloo_paaji2_bold"
            android:hint="@string/password_text"/>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>